--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
   <li class="nav-item">
     <a class="nav-link" routerLink="/admin" routerLinkActive="active">Manage</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/prueba" routerLinkActive="active">Imran</a>
+  </li>
 </ul>
 
 <router-outlet></router-outlet>
