Vista profile Imran, usando Lazy loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
-<ul class="nav justify-content-end bg-light">
+<ul class="nav justify-content-end bg-secondary">
   <!-- <li class="nav-item">
       <a class="nav-link active" aria-current="page" [routerLink] = "['/admin']">Manage</a>
     </li> -->
   <li class="nav-item">
-    <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+    <a class="nav-link text-white" routerLink="/home" routerLinkActive="active">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/admin" routerLinkActive="active">Manage</a>
+    <a class="nav-link text-white" routerLink="/admin" routerLinkActive="active">Manage</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/prueba" routerLinkActive="active">Imran</a>
+    <a class="nav-link text-white" routerLink="/prueba" routerLinkActive="active">Imran</a>
   </li>
 </ul>
 
