--- a/src/app/prueba/dashboard-prueba/dashboard-prueba.component.html
+++ b/src/app/prueba/dashboard-prueba/dashboard-prueba.component.html
@@ -1,1 +1,11 @@
-<p>dashboard-prueba works!</p>
+<section class="container">
+    <div class="row pt-3 pb-3">
+        <section class="jumbotron jumbotron-fluid bg-secondary text-white p-3">
+            <div class="container">
+              <h1 class="display-4">Hola, Bienvenidos</h1>
+              <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            </div>
+        </section>
+    </div>
+</section>
+
