--- a/src/app/prueba/prueba/prueba.component.html
+++ b/src/app/prueba/prueba/prueba.component.html
@@ -1,9 +1,9 @@
-<p>prueba works!</p>
-<h1>HOLA EUNICE FIORELLA ANCAJIMA SÓCOLA</h1>
-<h1>HOLA EUNICE FIORELLA ANCAJIMA SÓCOLA</h1>
-<h1>HOLA EUNICE FIORELLA ANCAJIMA SÓCOLA</h1>
-<h1>HOLA EUNICE FIORELLA ANCAJIMA SÓCOLA</h1>
-<h1>HOLA EUNICE FIORELLA ANCAJIMA SÓCOLA</h1>
-<h1>HOLA EUNICE FIORELLA ANCAJIMA SÓCOLA</h1>
-<h1>HOLA EUNICE FIORELLA ANCAJIMA SÓCOLA</h1>
-<h1>HOLA EUNICE FIORELLA ANCAJIMA SÓCOLA</h1>
+<nav class="nav justify-content-start bg-light">
+    <li class="nav-item">
+        <a routerLink="./" class="nav-link">Menu</a>
+    </li>
+    <li class="nav-item">
+        <a routerLink='./imran-profile' class="nav-link">Imran</a>
+    </li>
+</nav>
+<router-outlet></router-outlet>
