--- a/src/app/prueba/profile-prueba/profile-prueba.component.html
+++ b/src/app/prueba/profile-prueba/profile-prueba.component.html
@@ -1,7 +1,7 @@
 <section class="container">
     <div class="row pt-3 pb-3">
-        <div class="col-sm m-2" *ngFor="let item of nCards">
-            <div class="card col-sm" style="width: 18rem;">
+        <div class="col-sm" *ngFor="let item of nCards">
+            <div class="card m-2" style="width: 18rem;">
                 <img class="card-img-top" src="../../../assets/img/imi.jpg" alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
