--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,10 @@
         <li>{{ item.id }} {{ item.name }}</li>
     </ul>
 
-    <!-- <ul *ngFor="let item of items$ | async">
-        <li>{{ item.id }} {{ item.name }}</li>
-    </ul> -->
+    <mat-form-field class="example-form-field">
+  <input matInput type="text" placeholder="Clearable input" [(ngModel)]="value">
+  <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+    <mat-icon>close</mat-icon>
+  </button>
+</mat-form-field>
 </div>
